--- a/EATS/test2/Menu.xaml
+++ b/EATS/test2/Menu.xaml
@@ -30,76 +30,73 @@
                         <Button x:Name="BtnD" Margin="10"/>
                     </UniformGrid>
                 </StackPanel>
-                <Grid Width="300" Margin="5, 0, 0, 0">
+                
+                <Grid Width="300" Height="267" VerticalAlignment="Top" >
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
 
-                    <TextBlock x:Name="m1" FontSize="20" Text="m1"
-                               Grid.Row="0" Grid.Column="0" 
-                               HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    <TextBlock x:Name="m2" FontSize="20" Text="m2"
-                               Grid.Row="1" Grid.Column="0" 
-                               HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    <TextBlock x:Name="m3" FontSize="20" Text="m3"
-                               Grid.Row="2" Grid.Column="0" 
-                               HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    <TextBlock x:Name="m4" FontSize="20" Text="m4"
-                               Grid.Row="3" Grid.Column="0" 
-                               HorizontalAlignment="Center" VerticalAlignment="Center" />
-
-                    <Button x:Name="btrm1" FontSize="20" Content="X" Height="10"
-                            Grid.Row="0" Grid.Column="1" Margin="10"/>
-                    <Button x:Name="btrm2" FontSize="20" Content="X" Height="10"
-                            Grid.Row="1" Grid.Column="1" Margin="10"/>
-                    <Button x:Name="btrm3" FontSize="20" Content="X" Height="10"
-                            Grid.Row="2" Grid.Column="1" Margin="10"/>
-                    <Button x:Name="btrm4" FontSize="20" Content="X" Height="10"
-                            Grid.Row="3" Grid.Column="1" Margin="10"/>
-
-                    <TextBox x:Name="mn1" FontSize="20" Width="50"
-                             Grid.Row="0" Grid.Column="2"
+                    <GroupBox x:Name="Gb1" Grid.Row="0" Grid.ColumnSpan="5" 
+                            HorizontalAlignment="Center" Header="선택 메뉴1">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="m1" FontSize="15" Text="menu1"
+                               HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Margin="5, 0"/>
+                            <Button x:Name="btrm1" FontSize="20" Content="X" Margin="5, 0"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Height="31"/>
+                            <Button x:Name="btmin1" FontSize="20" Content="-" />
+                            <TextBox x:Name="mn1" FontSize="20" Width="50"
                              HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBox x:Name="mn2" FontSize="20" Width="50"
-                             Grid.Row="1" Grid.Column="2"
+                            <Button x:Name="btplu1" FontSize="20" Content="+" />
+                        </StackPanel>
+                    </GroupBox>
+                    <GroupBox x:Name="Gb2" Grid.Row="1" Grid.ColumnSpan="5" 
+                  HorizontalAlignment="Center" Header="선택 메뉴2">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="m2" FontSize="15" Text="menu2"
+                               HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Margin="5, 0"/>
+                            <Button x:Name="btrm2" FontSize="20" Content="X" Margin="5, 0"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Height="31"/>
+                            <Button x:Name="btmin2" FontSize="20" Content="-" />
+                            <TextBox x:Name="mn2" FontSize="20" Width="50"
                              HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBox x:Name="mn3" FontSize="20" Width="50"
-                             Grid.Row="2" Grid.Column="2"
+                            <Button x:Name="btplu2" FontSize="20" Content="+" />
+                        </StackPanel>
+                    </GroupBox>
+                    <GroupBox x:Name="Gb3" Grid.Row="2" Grid.ColumnSpan="5" 
+                  HorizontalAlignment="Center" Header="선택 메뉴3">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="m3" FontSize="15" Text="menu3"
+                               HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Margin="5, 0"/>
+                            <Button x:Name="btrm3" FontSize="20" Content="X" Margin="5, 0"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Height="31"/>
+                            <Button x:Name="btmin3" FontSize="20" Content="-" />
+                            <TextBox x:Name="mn3" FontSize="20" Width="50"
                              HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBox x:Name="mn4" FontSize="20" Width="50"
-                             Grid.Row="3" Grid.Column="2"
+                            <Button x:Name="btplu3" FontSize="20" Content="+" />
+                        </StackPanel>
+                    </GroupBox>
+                    <GroupBox x:Name="Gb4" Grid.Row="3" Grid.ColumnSpan="5" 
+                  HorizontalAlignment="Center" Header="선택 메뉴4">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="m4" FontSize="15" Text="menu4"
+                               HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           Margin="5, 0"/>
+                            <Button x:Name="btrm4" FontSize="20" Content="X" Margin="5, 0"
+                        HorizontalAlignment="Center" VerticalAlignment="Center" Height="31"/>
+                            <Button x:Name="btmin4" FontSize="20" Content="-" />
+                            <TextBox x:Name="mn4" FontSize="20" Width="50"
                              HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-                    <Button x:Name="btmin1" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="0" Grid.Column="3" Content="-"/>
-                    <Button x:Name="btmin2" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="1" Grid.Column="3" Content="-"/>
-                    <Button x:Name="btmin3" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="2" Grid.Column="3" Content="-"/>
-                    <Button x:Name="btmin4" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="3" Grid.Column="3" Content="-"/>
-
-                    <Button x:Name="btplu1" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="0" Grid.Column="4" Content="+"/>
-                    <Button x:Name="btplu2" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="1" Grid.Column="4" Content="+"/>
-                    <Button x:Name="btplu3" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="2" Grid.Column="4" Content="+"/>
-                    <Button x:Name="btplu4" FontSize="20" Height="10" Margin="10"
-                            Grid.Row="3" Grid.Column="4" Content="+"/>
-
+                            <Button x:Name="btplu4" FontSize="20" Content="+" />
+                        </StackPanel>
+                    </GroupBox>
                 </Grid>
-                
+
             </StackPanel>
             
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
