--- a/EATS/test2/Final.xaml
+++ b/EATS/test2/Final.xaml
@@ -13,6 +13,7 @@
             <TextBlock x:Name="TxtThank" Text="감사합니다!" FontSize="40" Margin="100, 0, 100, 0"/>
             <TextBlock x:Name="TxtRes" HorizontalAlignment="Center" 
                        Text="예상 조리 시간은 00:00입니다." Margin="30"/>
+            <Button x:Name="BtnEnd" Width="50" Content="확인" Click="BtnEnd_Click" />
         </StackPanel>
     </Grid>
 </Page>
