--- a/EATS/test2/Page1.xaml
+++ b/EATS/test2/Page1.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Page1">
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <StackPanel>
+        <StackPanel x:Name="Start">
             <TextBlock Name="TbWel" FontSize="70">Welcome!</TextBlock>
             <Button Name="btnStart" Margin="20" Click="btnStart_Click" >주문 시작</Button>
             <TextBlock Name="Dclock" FontSize="20" Margin="0, 0, 0, 20"
